--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "path_to_submodule"] 
-  path = ./pokedex
-  url = https://github.com/carpicoder/pokedex.git
+[submodule "pokedex"]
+	path = pokedex
+	url = https://github.com/carpicoder/pokedex.git
